--- a/.github/workflows/release-binaries-base.yml
+++ b/.github/workflows/release-binaries-base.yml
@@ -10,6 +10,8 @@ on:
         description: 'The github runner to run on'
         required: true
         type: string
+permissions:
+  contents: read
 jobs:
   release-binaries:
     name: Release compiled binaries for Linux/${{inputs.arch}}
@@ -17,11 +19,16 @@ jobs:
     strategy:
       matrix:
         go: [ '1.24' ]
+    permissions:
+      contents: write
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Go
-        uses: actions/setup-go@v3
+      - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
         with:
+          persist-credentials: false
+      - name: Set up Go
+        uses: actions/setup-go@be3c94b385c4f180051c996d336f57a34c397495 # v3
+        with:
+          cache: false  # Disable caching to avoid extraction conflicts
           go-version: ${{ matrix.go }}
       - name: Build Go release for linux/${{inputs.arch}}
         run: make artifact
@@ -29,7 +36,7 @@ jobs:
           GOOS: linux
           GOARCH: ${{ inputs.arch }}
       - name: Upload release asset
-        uses: actions/upload-release-asset@v1
+        uses: actions/upload-release-asset@e8f9f06c4b078e705bd2ea027f0926603fc9b4d5 # v1
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
