--- a/.github/workflows/update-offsets.yml
+++ b/.github/workflows/update-offsets.yml
@@ -3,21 +3,33 @@ on:
   schedule:
     - cron: '1 1 * * *'
   workflow_dispatch:
+
+# Set restrictive permissions at workflow level
+permissions:
+  contents: read
+
 jobs:
   UpdateOffsets:
     runs-on: ubuntu-latest
+    # Grant specific permissions needed only for this job
+    permissions:
+      contents: write  # Needed for creating commits
+      pull-requests: write  # Needed for creating PRs
     steps:
     - name: "Checkout repo"
-      uses: actions/checkout@v3
-    - name: "Update Go"
-      uses: actions/setup-go@v4
+      uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
       with:
+        persist-credentials: false
+    - name: "Update Go"
+      uses: actions/setup-go@0aaccfd150d50ccaeb58ebd88d36e91967a5f35b # v5
+      with:
+        cache: false  # Disable caching to avoid extraction conflicts
         go-version: '>=1.24'
         check-latest: true
     - name: "Update offsets"
       run: make update-offsets
     - name: "Create/update PR"
-      uses: peter-evans/create-pull-request@v5
+      uses: peter-evans/create-pull-request@4e1beaa7521e8b457b572c090b25bd3db56bf1c5 # v5
       with:
         commit-message: Automatic update of offsets.json
         title: Automatic update of offsets.json
