--- a/.github/workflows/vale.yml
+++ b/.github/workflows/vale.yml
@@ -3,6 +3,11 @@ on:
   pull_request:
     paths: ["docs/sources/**"]
   workflow_dispatch:
+
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
   vale:
     runs-on: ubuntu-latest
@@ -12,6 +17,6 @@ jobs:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           persist-credentials: false
-      - uses: grafana/writers-toolkit/vale-action@vale-action/v1
+      - uses: grafana/writers-toolkit/vale-action@1dd3173b59e3128c9d74645c4684a7b57aadbb77 # vale-action/v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
