--- a/.github/workflows/workflow_integration_tests_vm.yml
+++ b/.github/workflows/workflow_integration_tests_vm.yml
@@ -24,7 +24,9 @@ jobs:
       matrix:
         go: [ '1.22' ]
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
+        with:
+          persist-credentials: 'false'
       - name: Clean up disk space
         run: |
           docker system prune -af
@@ -36,10 +38,13 @@ jobs:
       - name: Run VM integration tests
         run: |
           make docker-generate
-          sudo make -C test/vm KERNEL_VER=${{ inputs.kernel-version }} ARCH=${{ inputs.arch }} && [ -f testoutput/success ]
+          sudo make -C test/vm && [ -f testoutput/success ]
+        env:
+          KERNEL_VER: ${{ inputs.kernel-version }}
+          ARCH: ${{ inputs.arch }}
         timeout-minutes: ${{ inputs.timeout-minutes }}
       - name: Upload integration test logs
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
         if: always()
         with:
           name: Test Logs
@@ -47,7 +52,7 @@ jobs:
             testoutput/*.log
             testoutput/kind
       - name: Report coverage
-        uses: codecov/codecov-action@v4
+        uses: codecov/codecov-action@b9fd7d16f6d7d1b5d2bec1a2887e65ceed900238 # v4
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         with:
